--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="assets/darkmode.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
     <script src="assets/index.js"></script>
     <title>Clínica de Reabilitação | Grupo Águias da Vida</title>
 </head>
@@ -34,6 +38,31 @@
             </div>
         </div>
     </header>
+    <section class="section-container">
+        <div class="slider">
+            <img src="assets/imgs/slider.png" alt="Imagem 1">
+            <img src="assets/imgs/slider/1.png" alt="Imagem 2">
+            <img src="assets/imgs/slider/2.png" alt="Imagem 3">
+            <img src="assets/imgs/slider/3.png" alt="Imagem 3">
+            <img src="assets/imgs/slider/4.png" alt="Imagem 3">
+            <img src="assets/imgs/slider/5.png" alt="Imagem 3">
+        </div>
+    </section>
     
+
+    <script>
+        $(document).ready(function(){
+            $('.slider').slick({
+                autoplay: true,
+                autoplaySpeed: 3000,
+                dots: true,
+                arrows: false,
+                infinite: true,
+                speed: 500,
+                fade: true,
+                cssEase: 'linear'
+            });
+        });
+    </script>
 </body>
 </html>
