--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                 <img id="logo" src="assets/imgs/dark.png" alt="Logo Águia" class="logo-img">
             </a>
         </div>
+
+
+        <div class="toggle-menu">
+            <span class="menu-icon">&#9776;</span>
+        </div>
+        
+
             <nav>
                 <ul>
                     <li><a href="#">INÍCIO</a></li>
@@ -58,7 +65,7 @@
                 dots: true,
                 arrows: false,
                 infinite: true,
-                speed: 500,
+                speed: 800,
                 fade: true,
                 cssEase: 'linear'
             });
