fix:ajust menu bar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         
 
-            <nav>
+            <nav class="nav-link">
                 <ul>
                     <li><a href="#">INÍCIO</a></li>
                     <li><a href="#">SOBRE NÓS</a></li>
@@ -36,13 +36,15 @@
                     <li><a href="#">BLOG</a></li>
                     <li><a href="#">AJUDA</a></li>
                 </ul>
+
+                <div class="toggle-container">
+                    <input type="checkbox" id="theme-toggle" class="toggle-input">
+                    <label for="theme-toggle" class="toggle-label">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
             </nav>
-            <div class="toggle-container">
-                <input type="checkbox" id="theme-toggle" class="toggle-input">
-                <label for="theme-toggle" class="toggle-label">
-                    <span class="toggle-slider"></span>
-                </label>
-            </div>
+            
         </div>
     </header>
     <section class="section-container">
