fix: ajust menu bar

--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
     </header>
     <section class="section-container">
         <div class="slider">
-            <img src="assets/imgs/slider.png" alt="Imagem 1">
             <img src="assets/imgs/slider/1.png" alt="Imagem 2">
             <img src="assets/imgs/slider/2.png" alt="Imagem 3">
             <img src="assets/imgs/slider/3.png" alt="Imagem 3">
             <img src="assets/imgs/slider/4.png" alt="Imagem 3">
             <img src="assets/imgs/slider/5.png" alt="Imagem 3">
+            <img src="assets/imgs/slider/6.png" alt="Imagem 3">
+            <img src="assets/imgs/slider/7.png" alt="Imagem 3">
         </div>
     </section>
     
