--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </ul>
 
                 <div class="toggle-container">
+                   <span>Dark Mode</span>
                     <input type="checkbox" id="theme-toggle" class="toggle-input">
                     <label for="theme-toggle" class="toggle-label">
                         <span class="toggle-slider"></span>
